# gentle-ap-physics-rs

./: .travis.yml  Cargo.toml  README.md
benches/: .my_benchmark.rs.swp  my_benchmark.rs  vector3_benchmark.rs
src/: lib.rs  main.rs  math.rs
src/entity/: mod.rs  plane.rs  sphere.rs  worldstate.rs
src/gfx/: mod.rs
src/util/: math.rs  mod.rs  time.rs  vector3.rs
tests/: test_collision.rs  test_scenario.rs
